Take in IP.Config in Node::create